Modificando imagenes main

--- a/estilos.css
+++ b/estilos.css
@@ -64,7 +64,7 @@ header .carrocompras{
  }
 
 main .primerdiv{
-   background-image: url(/Imagenes/slider-2.jpg);
+   background-image: url(./Imagenes/slider-2.jpg);
    background-repeat: no-repeat;
    padding: 18rem; 
    margin: 2rem;
@@ -110,7 +110,7 @@ main a{
 
 
 .img1 {
-    background-image: url(/Imagenes/banner-1.png);
+    background-image: url(./Imagenes/banner-1.png);
     background-repeat: no-repeat;
     margin: 0;
     padding: 12rem;
@@ -120,7 +120,7 @@ main a{
 }
 
 .img2 {
-    background-image: url(/Imagenes/banner-2.png);
+    background-image: url(./Imagenes/banner-2.png);
     background-repeat: no-repeat;
     margin: 0;
     padding:12rem; 
@@ -257,7 +257,7 @@ main .segundodiv p{
 
 .sextodiv{
     justify-content: flex-start;
-    background-image: url(Imagenes/bg-2.jpg);
+    background-image: url(./Imagenes/bg-2.jpg);
     background-size: 2200px 960px;
     height: 35vh;
 }
