--- a/producto.css
+++ b/producto.css
@@ -1,97 +1,60 @@
 *{
-    box-sizing: border-box;/*Regula el tamaño, no permite que se desborden*/
-}
-/*Quita el Scroll*/
-::-webkit-scrollbar {
-    display: none;
-}
-/*Modifica el txt sobre la 1ra imagen homepage*/
-h1{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 500;
-    color: #fff;
-    font-size: 35;
-}
-h2{
-    font-family: 'Playfair Display', serif;
-    font-weight: lighter;
-    font-size: 30;
-    color: #333333;
-    text-align: center;
-}
-h3{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 500;
-    font-size: 30;
-    color: #575757;
-}
-h4{
-    font-family: 'Playfair Display', serif;
-    font-weight: bold;
-    font-size: 20;
-    color: #333333;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
+    color: black;
+    font-family: "Work Sans";
+    /* font-family: 'Playfair Display';
+    font-family: "Lora"; */
 }
-/*1er Container Body
-Encabezado
-Se implementa un display tipo grilla de 3 columnas de misma medida y una sola fila */
+
+html{
+    font-size: 16px; /*se establece el tamaño base de las fuentes*/
+}
+
 header{
-    display:grid;
-    grid-template-columns: 2fr 4fr 1fr;
-    padding: 0 0;
-}
-/*Barra de Navegación*/
-.nav{
-    grid-area: 1 / 2 / 2 / 3;
     display: flex;
-    justify-content: flex-end;
-}
-/*Estilo letra nav*/
-.nave{
-    list-style: none;/*quita la numeracion*/
-    display:flex; /*acomoda los items en linea*/
-    justify-content: flex-end;/*Da espaciado items del nav*/
-    padding-left:0;/*Quita espacio por defecto de la lista*/
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
-}
-.nave li{
-    padding: 35;
-}
-/*Logo Te*/
-.nave1{
-    grid-area: 1 / 1 / 2 / 2;
-    align-self: center;
-    justify-self: flex-end;
-}
-/*Despliegue*/
-.pay{
-    grid-area: 1 / 3 / 2 / 4;
-    display: flex;
-    justify-content: flex-start;
+    justify-content:space-between;
     align-items: center;
-    padding: 0 20;
+    padding: 1rem; /* separa de la margen las opciones de navegación*/
 }
-/*USD*/
-.pay1{
-    padding: 0 20; /*Da espaciado entre USD y flecha*/
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
+
+header ul{
+    display: flex;
+    list-style-type: none;
+    text-decoration: none;
 }
-.pay2{
-    width: 10;
-    height: 10;
+
+header ul li {
+    display: flex;
+    padding: 1rem;
+    font-family: "Work Sans";
 }
-/*Carrito de compras*/
-.car{
-    transform: scaleX(-1);/*Genera un estilo espejo*/
-    padding: 0 20;
+
+header ul li a{
+    text-decoration: none;
 }
+
+header .logo{
+    margin-right: 20rem;
+    justify-content: center;
+    align-items: center;
+}
+
+header select{
+    border: none; /*quitar los bordes del selector de idiomas*/
+    margin-right: -12rem;
+    font-family: "Work Sans";
+    
+} 
+
+header .carrocompras{
+    margin: 0;
+    margin-right: 6rem;
+} 
+
 /*2do container Body*/
 .first{
     grid-area: 2 / 1 / 3 / 2;
@@ -171,6 +134,7 @@ header{
     width: 20;
     height: 20;
 }
+
 .s2c{
     grid-area:  1 / 2 / 1 / 3;
 }
@@ -275,55 +239,41 @@ header{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 50 350;
 }
-/*6to Container*/
-footer{
-    grid-area: 7 / 1 / 8 / 2;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1/8fr;
-    line-height: 2;
-    padding: 0 300;
-}
-.d1{
-    grid-area: 1 / 1 / 2 / 2;
-}
-.d2{
-    grid-area: 1 / 2 / 2 / 3;
-}
-.d3{
-    grid-area: 1 / 3 / 2 / 4;
-}
-.d4{
-    grid-area: 1 / 4 / 2 / 5;
-}
-.li{
-    list-style: none;
-    padding-left: 0;
-    font-family: 'Lora', serif;
-    font-size: 16;
-    color:  #333333;
-}
-.d5{
-    grid-area: 2 / 1 / 3 / 5;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    align-items: center;
-    padding-top: 50;
-}
-/*Ultimos elementos Footer*/
-.d6{
-    grid-area: 1 / 1  / 2 / 2;
-    font-family: 'Lora', serif;
-    font-size: 16;
-    color:  #333333;
-}
-.d7{
-    grid-area: 1 /  2  / 2 /  3;
+
+
+.footer1{
     display: flex;
-    justify-content: end;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 6rem;
+    background-color: #f8f8f8;
+    font-family: 'Playfair Display';
 }
-.fa-heart{
-    color: #ff0000;
+.listafooter li{
+    list-style: none;
+    padding: 0.5rem;
+}
+.listafooter li,a{
+    text-decoration: none;
+    color: #333333;
+}
+.a_ul_footer{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.footer2{
+    background-color: #EBEBEB;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.sabujcha_footer{
+    padding: 1rem;
+}
+.img_footer{
+    padding: 1rem;
 }
 
